--- a/Gestor.csproj
+++ b/Gestor.csproj
@@ -102,6 +102,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ACGestorDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Cartao.cs" />
     <Compile Include="Classes\SQLServer.cs" />
     <Compile Include="Classes\Conta.cs" />
     <Compile Include="Formularios\frmConta.cs">
@@ -128,9 +129,18 @@
     <Compile Include="Formularios\frmRecebimentos.Designer.cs">
       <DependentUpon>frmRecebimentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\frmCadastroCartao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\frmCadastroCartao.Designer.cs">
+      <DependentUpon>frmCadastroCartao.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Util.cs" />
+    <EmbeddedResource Include="Formularios\frmCadastroCartao.resx">
+      <DependentUpon>frmCadastroCartao.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Formularios\frmConta.resx">
       <DependentUpon>frmConta.cs</DependentUpon>
     </EmbeddedResource>
